[package]
name = "rust_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
dasp_sample = "0.11"
gio = "^0.3.0"
gtk = "^0.3.0"
futures = "0.3"
audiotags = "0.4.1"
rodio = "0.16.0"
unix-named-pipe = "0.2.0"

[dev-dependencies]
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.14.0"
rodio = "0.16.0"
